[project]
name = "mosaic-blur"
description = "A simple mosaic blur node for ComfyUI that uses CV2 or Pillow"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch", "Pillow", "numpy", "opencv-python"]

[project.urls]
Repository = "https://github.com/nmlen/comfyui-mosaic-blur"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-mosaic-blur"
Icon = ""
